--- a/src/components/MentalState/MentalState.scss
+++ b/src/components/MentalState/MentalState.scss
@@ -99,7 +99,7 @@
   &__item:nth-child(2) {
     order: 0;
     @include onTablet--s {
-      order: -2;
+      // order: -2;
     }
   }
 
@@ -128,6 +128,17 @@
     }
 
     &--girl-sad {
+    }
+  }
+
+  &__girls-images {
+    justify-content: center;
+    align-items: center;
+  }
+
+  &__girls-images--swap-images > :last-child {
+    @include onDesktop{
+      order: -1;
     }
   }
 }
