--- a/src/components/Participants/Participants.scss
+++ b/src/components/Participants/Participants.scss
@@ -3,16 +3,38 @@
 
 .participants {
   &__content {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
+    display: grid;
+    margin: 0 0 24px;
+
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(3, min-content);
+
+
+    @include onTablet--s {
+      grid-template: repeat(2, min-content) / repeat(12, 1fr)
+    }
+
+    @include onDesktop {
+      grid-template: repeat(3, min-content) / repeat(12, 1fr);
+
+      row-gap: 24px;
+    }
   }
 
   &__description {
     padding: 24px;
     border-radius: 24px;
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
+
+    @include onTablet--s {
+      grid-column: 1 / 13;
+      grid-row: 1 / 2;
+    }
 
     @include onDesktop {
+      grid-column: 1 / 10;
+      grid-row: 1 / 2;
       background-color: $colorBeige;
     }
   }
@@ -87,7 +109,6 @@
   }
 
   &__image {
-    margin: 0 0 24px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -99,14 +120,14 @@
     & img {
       width: 100%;
       object-fit: contain;
-      object-position: center;
+      object-position: bottom;
 
       @include onTablet--s {
-        width: 50%;
+        width: 100%;
       }
 
       @include onDesktop {
-        width: 100%;
+        height: 100%;
       }
     }
 
@@ -128,11 +149,40 @@
       object-position: left;
     }
 
-    &--europe-map {
-      margin: 0 0 24px;
+
+    &--ukraine-map {
+      display: grid;
+
+      grid-column: 1 / 2;
+      grid-row: 2 / 3;
+      width: 80%;
+      margin: 0 auto;
 
       @include onTablet--s {
         margin: 0;
+        width: 100%;
+
+        grid-column: 1 / 8;
+        grid-row: 2 / 4;
+      }
+
+      @include onDesktop {
+      }
+    }
+
+    &--europe-map {
+      display: grid;
+      grid-column: 1 / 2;
+      grid-row: 3 / 4;
+
+      @include onTablet--s {
+        grid-column: 8 / 13;
+        grid-row: 1 / 4;
+
+      }
+
+      @include onDesktop {
+
       }
     }
 
