--- a/src/components/Team/Team.scss
+++ b/src/components/Team/Team.scss
@@ -29,7 +29,6 @@
        }
 
       @include onDesktop {
-        // gap: 0;
 
       }
 
@@ -48,14 +47,13 @@
 
 .person {
   width: 248px;
-  height: 360px;
+  // height: 360px;
   position: relative;
-  padding: 32px 16px 32px;
+  padding: 24px 16px 24px;
   display: flex;
   flex-direction: column;
   align-items: center;
 
-  // border: 1px solid $colorBeigeDark;
   border-radius: 24px;
 
   transition: box-shadow 0.3s ease-in-out;
@@ -69,8 +67,8 @@
   &__image-container {
     position: relative;
     margin: 0 0 24px;
-    width: 180px;
-    height: 180px;
+    width: 140px;
+    height: 140px;
     border-radius: 50%;
     overflow: hidden;
 
