--- a/src/components/Team/Team.scss
+++ b/src/components/Team/Team.scss
@@ -1,12 +1,22 @@
 @import '../../styles/utils/vars';
 @import '../../styles/utils/mixins';
 
-.team {
-  &__list {
-    & .slide {
-      height: 402px;
-    }
 
+.team {
+  &__carousel {
+    position: relative;
+    height: 384px;
+
+    &.carousel.carousel-dark.slide .carousel-indicators {
+      position: absolute;
+      bottom: 0;
+      [data-bs-target] {
+        background-color: $colorBeige;
+      }
+    }
+  }
+
+  &__list {
     & .carousel-inner {
       display: flex;
       align-items: start;
@@ -17,19 +27,20 @@
 
       @include onTablet--s {
         display: flex;
-        flex-wrap: wrap;
         margin: 0 auto;
-        max-width: 696px;
-        row-gap: 8px;
+        width: calc(200px * 2 + 20px);
+        gap: 20px;
+        flex-wrap: wrap;
+
       }
 
 
       @include onTablet--m {
-        row-gap: 86px;
-       }
+      }
 
       @include onDesktop {
-
+        width: calc(200px * 4 + 3 * 20px);
+        justify-content: center;
       }
 
       @include onDesktop--xl {
@@ -40,14 +51,16 @@
 
   &__person {
     margin: 0 auto;
+
+    @include onTablet--s {
+      margin: 0px;
+    }
   }
-
-
 }
 
 .person {
-  width: 248px;
-  // height: 360px;
+  width: 200px;
+  height: 330px;
   position: relative;
   padding: 24px 16px 24px;
   display: flex;
@@ -85,6 +98,8 @@
   }
 
   &__name {
+    width: min-content;
+    text-align: center;
     margin: 0 0 12px;
     font-weight: bold;
     color: $colorGreen;
@@ -96,5 +111,6 @@
     font-size: 14px;
     opacity: 0.8;
     line-height: 1.5;
+    color: #2e2e2e
   }
 }
