--- a/src/components/Contacts/Contacts.scss
+++ b/src/components/Contacts/Contacts.scss
@@ -3,11 +3,32 @@
 
 
 .contacts {
+  &__title {
+    font-size: 16px;
+    margin: 0 0 12px;
+    font-weight: 700;
+  }
+
   &__content {
     display: flex;
     flex-direction: column;
-font-size: 14px;
+
+    @include onDesktop {
+      flex-direction: row;
+      flex-wrap: wrap;
+      justify-content: space-between;
+    }
+  }
+
+  &__links {
+    display: flex;
+    flex-direction: column;
+    font-size: 14px;
     margin: 0 0 24px;
+
+    @include onDesktop {
+      width: 230px;
+    }
   }
 
   &__contact {
@@ -77,6 +98,10 @@ font-size: 14px;
     width: 100%;
     height: 280px;
 
+    @include onDesktop {
+      width: min-content;
+    }
+
     & iframe {
       display: block;
       margin: 0 auto;
@@ -95,10 +120,36 @@ font-size: 14px;
 }
 
 .subscribe {
+  display: flex;
+  flex-direction: column;
+
+@include onDesktop {
+  gap: 12px;
+  width: 240px;
+}
+
+
   &__title {
     text-align: center;
     font-weight: 700;
     margin: 0 0 12px;
+
+    @include onDesktop {
+      text-align: left;
+    }
+  }
+
+  &__form {
+    display: flex;
+    flex-direction: column;
+
+    @include onDesktop {
+      flex-direction: column;
+      align-items: start;
+      flex-wrap: wrap;
+      width: 100%;
+      gap: 12px;
+    }
   }
 
   &__item {
@@ -108,6 +159,10 @@ font-size: 14px;
     border-radius: 50px;
     padding: 12px 24px;
     transition: border-color 300ms ease-in-out;
+
+    @include onDesktop {
+      margin: 0;
+    }
 
     &:nth-child(3) {
       margin-bottom: 24px;
@@ -151,16 +206,27 @@ font-size: 14px;
       color: $colorGreen;
       border-color: $colorGreen;
     }
+
+    @include onDesktop {
+      margin: 0;
+    }
   }
 
 }
 
 .social {
+  display: flex;
+  flex-direction: column;
+
   &__title {
     text-align: center;
     margin: 0 0 24px;
     font-weight: 700;
-    color: $colorGreen
+    color: $colorGreen;
+
+    @include onDesktop {
+
+    }
   }
 
   &__icons {
@@ -174,6 +240,10 @@ font-size: 14px;
       }
     }
 
+    @include onDesktop {
+      display: flex;
+      flex-direction: column;
+    }
   }
 
   &__icon {
