--- a/src/components/Contacts/Contacts.scss
+++ b/src/components/Contacts/Contacts.scss
@@ -20,16 +20,16 @@
 
     @include onTablet--m {
       display: grid;
-      grid-template: repeat(2, 1fr) / repeat(2, 1fr)
+      grid-template: repeat(2, 1fr) / repeat(2, 1fr);
     }
 
     @include onDesktop {
-      grid-template: repeat(1, 1fr) / repeat(4, 1fr)
+      grid-template: repeat(1, min-content) / repeat(4, max-content);
+      justify-content: space-between;
     }
 
     @include onDesktop--xl {
-      width: 100%;
-      justify-content: space-between;
+
     }
   }
 
@@ -44,7 +44,7 @@
     }
 
     @include onDesktop {
-      width: 230px;
+      width: 222px;
     }
   }
 
@@ -71,7 +71,7 @@
       align-items: center;
       justify-content: center;
 
-      margin-right: 16px;
+      margin-right: 8px;
 
      filter: invert(0.5);
       background-size: contain;
@@ -116,13 +116,15 @@
     height: 280px;
 
     @include onDesktop {
-      width: min-content;
+      width: 264px;
+      height: 264px;
     }
 
     & iframe {
       display: block;
       margin: 0 auto;
-      height: 280px;
+      width: 100%;
+      height: 100%;
       border-radius: 24px;
     }
   }
@@ -149,7 +151,6 @@
   flex-direction: column;
 
 @include onDesktop {
-  gap: 12px;
   width: 240px;
 }
 
@@ -182,8 +183,10 @@
     width: 100%;
     border: 1px solid #eee;
     border-radius: 50px;
-    padding: 12px 24px;
+    padding: 8px 16px;
     transition: border-color 300ms ease-in-out;
+
+    font-size: 12px;
 
     @include onDesktop {
       margin: 0;
@@ -194,7 +197,7 @@
     }
 
     &::placeholder {
-      font-size: 14px;
+      font-size: 12px;
       color:#aeadad;
     }
 
@@ -243,14 +246,20 @@
   display: flex;
   flex-direction: column;
 
+  width: max-content;
+
   &__title {
     text-align: center;
     margin: 0 0 24px;
     font-weight: 700;
     color: $colorGreen;
 
-    @include onDesktop {
+    @include onTablet--s {
+      text-align-last: left;
 
+    }
+
+    @include onDesktop {
     }
   }
 
