--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -2,8 +2,6 @@
 @import '../../styles/utils/mixins';
 
 .hero {
-
-
   &__content {
     position: relative;
 
@@ -21,16 +19,21 @@
 
     height: 290px;
 
-    background: no-repeat scroll right / cover url('/images/hero/main-banner--mobile-full.png'), linear-gradient(90deg, rgba(217, 217, 217, 0.00) 0%, #BA8A49 100%);
+    background: no-repeat scroll right / cover url('/images/hero/main-banner--mobile-full.png'), linear-gradient(90deg, rgb(255, 255, 255) 0%, #BA8A49 100%), $colorGreen;
 
     &--green-fill {
       position: absolute;
-      height: 200px;
-      width: 200px;
+      height: 40px;
+      width: 40px;
       background-color: $colorGreen;
       bottom: 0;
       right: 0;
       z-index: -1;
+
+      display: none;
+      @include onTablet--s {
+        display: block;
+      }
     }
 
     @include hero--mobile-big {
