--- a/src/components/ModulesList/ModulesList.scss
+++ b/src/components/ModulesList/ModulesList.scss
@@ -10,7 +10,6 @@
     }
   }
 
-
   &__title {
     margin: 0 0 24px;
     text-transform: uppercase;
@@ -23,8 +22,7 @@
   &__list {
     display: flex;
     flex-direction: row;
-
-
+    justify-content: center;
     margin: 0 0 24px;
 
     @include onTablet--s {
