--- a/src/components/Results/Results.scss
+++ b/src/components/Results/Results.scss
@@ -22,23 +22,38 @@
   }
 
   & .carousel {
-    height: 360px;
+    height: 374px;
+    display: flex;
+    align-items: start;
 
-    &-control-prev {
-      transform: translate(-80%, -110%);
+    @include onTablet--s {
+      display: none;
     }
 
-    &-control-next {
-      transform: translate(80%, -110%);
+    &-indicators {
+      bottom: -15px;
+
+      [data-bs-target] {
+        background-color: $colorGreen;
+      }
+    }
+
+    & > .carousel-control-prev {
+      top: calc((374px / 2) - 30px)
+    }
+
+    & > .carousel-control-next {
+      top: calc((374px / 2) - 30px)
     }
   }
 
   & .carousel-item {
-    padding: 0 0 40px;
+    // padding: 0 0 40px;
   }
 
   &__item {
     margin: 0 auto 20px;
+
 
     @include onTablet--s {
       margin: 0;
@@ -62,6 +77,17 @@
 
     align-items: center;
     gap: 12px;
+
+    transition: all 0.3s linear;
+
+    &:hover {
+      background-color: $colorGreen;
+      color: $colorBeige;
+
+      & .results__icon {
+        fill: $colorBeige;
+      }
+    }
   }
 
   &__icon {
@@ -69,6 +95,7 @@
     width: 64px;
     height: 60px;
     flex-shrink: 0;
+    transition: all 0.3s linear;
   }
 
   &__number {
