--- a/src/components/ReviewItem/ReviewItem.scss
+++ b/src/components/ReviewItem/ReviewItem.scss
@@ -5,10 +5,9 @@
   padding: 32px 32px 24px;
   width: 280px;
   display: flex;
-  align-self: center;
+  // align-self: center;
   flex-direction: column;
   align-items: center;
-
 
   @include onTablet--s {
     width: 220px;
