--- a/src/styles/blocks/carousel.scss
+++ b/src/styles/blocks/carousel.scss
@@ -2,27 +2,13 @@
 @import '../../styles/utils/vars';
 
 .carousel {
-  height: 400px;
-
-  // @include onTablet--s {
-  //     display: none;
-  // }
+  // height: 400px;
 
   &-inner {
-    // height: 100%;
-    // display: flex;
-    // flex-direction: row;
-    // justify-content: center;
-    // align-items: start;
   }
 
   &-item {
-    // margin: 0;
-    // @include onTablet--s {
-    //   width: 100%;
-    //   justify-content: center;
-
-    // }
+    position: relative;
   }
 
   &-dark &-indicators [data-bs-target] {
