--- a/src/components/ModulesList/ModulesList.scss
+++ b/src/components/ModulesList/ModulesList.scss
@@ -58,7 +58,7 @@
   &__title {
     font-weight: 700;
     text-shadow: #0d4f3a71 2px 2px 10px;
-
+    font-size: 14px;
 
     color: $colorGreen;
     @include onTablet--s {
