--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -7,13 +7,14 @@
 
   &__section {
     &--bgc-green {
-      background-color: $colorGreen;
+      background-color: $colorDarkGreen;
       color: $colorBeige;
 
       & .section__title {
         color: $colorBeige;
 
-        &::before, &::after {
+        &::before,
+        &::after {
           background-image: url('/images/decor/leaf-yellow.png');
           filter: brightness(5);
         }
