--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,3 +1,5 @@
-$colorGreen: #0D4F3A;
-$colorBeige: #F7F0E8;
-$colorBeigeDark: #E8DED2;
+$colorDarkGreen: #0d4f3a;
+$colorLightGreen: #078c64;
+$colorBeige: #f7f0e8;
+$colorBeigeDark: #e8ded2;
+$colorGold: #b88744;
