--- a/src/components/ModulesList/ModulesList.scss
+++ b/src/components/ModulesList/ModulesList.scss
@@ -15,8 +15,7 @@
     text-transform: uppercase;
     font-weight: 700;
 
-    color: $colorGreen;
-
+    color: $colorDarkGreen;
   }
 
   &__list {
@@ -60,7 +59,7 @@
     text-shadow: #0d4f3a71 2px 2px 10px;
     font-size: 14px;
 
-    color: $colorGreen;
+    color: $colorDarkGreen;
     @include onTablet--s {
       font-size: 12px;
     }
@@ -106,7 +105,6 @@
     background-size: contain;
     background-repeat: no-repeat;
     background-position: top;
-
   }
 
   &__cover {
@@ -137,11 +135,6 @@
     }
   }
 
-
-
   &__report-button {
-
   }
-
-
 }
