--- a/src/components/Participants/Participants.scss
+++ b/src/components/Participants/Participants.scss
@@ -9,9 +9,8 @@
     grid-template-columns: repeat(1, 1fr);
     grid-template-rows: repeat(3, min-content);
 
-
     @include onTablet--s {
-      grid-template: repeat(2, min-content) / repeat(12, 1fr)
+      grid-template: repeat(2, min-content) / repeat(12, 1fr);
     }
 
     @include onDesktop {
@@ -73,7 +72,6 @@
       font-weight: 700;
       color: #fff;
 
-
       border-radius: 8px;
       float: left;
       box-shadow: 2px 2px 4px #333;
@@ -86,7 +84,7 @@
     }
 
     &:nth-child(1) &--state {
-      background-color: #A05E02;
+      background-color: #a05e02;
     }
 
     &:nth-child(2) &--state {
@@ -94,21 +92,21 @@
     }
 
     &:nth-child(3) &--state {
-      background-color: #ECC064;
+      background-color: #ecc064;
       color: #074030;
     }
 
     &:nth-child(4) &--state {
-      background-color: #15694F;
+      background-color: #15694f;
     }
 
     &:nth-child(5) &--state {
-      background-color: #B88744;
+      background-color: #b88744;
     }
 
     &:nth-child(6) &--state {
-      background-color: #F7F0E8;
-      color: #2B2B2A;
+      background-color: #f7f0e8;
+      color: #2b2b2a;
     }
   }
 
@@ -158,7 +156,6 @@
       object-position: left;
     }
 
-
     &--ukraine-map {
       display: grid;
 
@@ -187,14 +184,11 @@
       @include onTablet--s {
         grid-column: 8 / 13;
         grid-row: 2 / 5;
-
       }
 
       @include onDesktop {
-
       }
     }
-
 
     &--girl-sad {
       background-image: url('/images/about/about--girl-sad.png');
@@ -208,14 +202,13 @@
   &__age-structure {
     display: flex;
     justify-content: center;
-    // align-items: center;
   }
 
   &__percentage {
-    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     text-align: center;
     font-size: 70px;
     font-weight: 700;
-    color: $colorGreen;
+    color: $colorDarkGreen;
   }
 }
