--- a/src/components/Results/Results.scss
+++ b/src/components/Results/Results.scss
@@ -2,7 +2,7 @@
 @import '../../styles/utils/vars';
 
 .results {
-  color: $colorGreen;
+  color: $colorDarkGreen;
 
   &__list {
     &--desktop {
@@ -34,16 +34,16 @@
       bottom: -15px;
 
       [data-bs-target] {
-        background-color: $colorGreen;
+        background-color: $colorDarkGreen;
       }
     }
 
     & > .carousel-control-prev {
-      top: calc((374px / 2) - 30px)
+      top: calc((374px / 2) - 30px);
     }
 
     & > .carousel-control-next {
-      top: calc((374px / 2) - 30px)
+      top: calc((374px / 2) - 30px);
     }
   }
 
@@ -53,7 +53,6 @@
 
   &__item {
     margin: 0 auto 20px;
-
 
     @include onTablet--s {
       margin: 0;
@@ -81,7 +80,7 @@
     transition: all 0.3s linear;
 
     &:hover {
-      background-color: $colorGreen;
+      background-color: $colorDarkGreen;
       color: $colorBeige;
 
       & .results__icon {
@@ -91,7 +90,7 @@
   }
 
   &__icon {
-    fill: $colorGreen;
+    fill: $colorDarkGreen;
     width: 64px;
     height: 60px;
     flex-shrink: 0;
