--- a/src/components/Participants/Participants.scss
+++ b/src/components/Participants/Participants.scss
@@ -14,7 +14,7 @@
     }
 
     @include onDesktop {
-      grid-template: max-content 50px min-content min-content / repeat(12, 1fr);
+      grid-template: max-content min-content min-content / repeat(12, 1fr);
 
       row-gap: 24px;
     }
@@ -46,14 +46,13 @@
     flex-direction: column;
     width: 100%;
     align-items: center;
-    // gap: 25px;
 
     @include onDesktop {
       display: flex;
       justify-content: space-evenly;
       background-color: $colorBeige;
       padding: 20px;
-      border-radius: 24px;
+      border-radius: 12px;
     }
   }
 
@@ -205,10 +204,9 @@
   }
 
   &__percentage {
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     text-align: center;
-    font-size: 70px;
-    font-weight: 700;
+    font-size: 56px;
+    font-weight: 600;
     color: $colorDarkGreen;
   }
 }
