--- a/src/components/Presentation/Presentation.scss
+++ b/src/components/Presentation/Presentation.scss
@@ -12,28 +12,10 @@
   }
 
   &__video-container {
+
+    border-radius: 24px;
+    overflow: hidden;
+
     margin: 0 0 24px;
-
-    & iframe {
-      width: 100%;
-      height: 100%;
-      border-radius: 24px;
-
-      @include hero--mobile-big {
-        height: 200px;
-      }
-
-      @include onTablet--s {
-        height: 280px;
-      }
-
-      @include onTablet--m {
-        height: 360px;
-      }
-
-      @include onDesktop {
-        height: 520px;
-      }
-    }
   }
 }
