--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -1,9 +1,9 @@
 .projects {
   &__uc-container {
+    display: block;
     margin: 0 auto 48px;
     width: 70%;
     border-radius: 55px;
-    /* border-radius: 650px; */
     overflow: hidden;
   }
 
@@ -11,4 +11,8 @@
     font-size: 24px;
     text-align: center;
   }
+
+  &__past-project {
+    margin: 0 0 48px;
+   }
 }
