--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -5,6 +5,8 @@
 // @import 'blocks/container';
 @import 'blocks/carousel';
 @import 'blocks/button';
+@import 'blocks/therapist';
+
 
 .text {
   &-align {
