--- a/src/components/Team/Team.scss
+++ b/src/components/Team/Team.scss
@@ -46,15 +46,23 @@
   }
 
   &__person {
+    display: flex;
+    justify-content: center;
+    width: min-content;
     margin: 0 auto;
+    padding: 0;
 
     @include onTablet--s {
-      margin: 0px;
+      margin: 0;
     }
   }
 }
 
 .person {
+  text-decoration: none;
+  padding: 0;
+  margin: 0;
+
   width: 240px;
   height: 320px;
   position: relative;
