--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -2,5 +2,6 @@ $colorDarkGreen: #0d4f3a;
 $colorLightGreen: #078c64;
 $colorBeige: #f7f0e8;
 $colorBeigeDark: #e8ded2;
+$colorGoldLight: #eccb80;
 $colorGold: #b88744;
 $colorGoldDark:#D89d4c;
