--- a/src/components/PastProjects/PastProjects.scss
+++ b/src/components/PastProjects/PastProjects.scss
@@ -1,6 +1,5 @@
 .past-project {
   display: flex;
-  gap: 20px;
 
   &__image {
     border-radius: 24px;
@@ -16,6 +15,16 @@
 
   &__description {
     font-size: 18px;
+  }
+
+  &__title {
+    font-size: 30px;
+    margin: 0 0 24px;
+    font-weight: 600;
+  }
+
+  &__paragraph {
+    margin: 0 0 24px;
   }
 
   &--reverse {
