--- a/src/components/Team/Team.scss
+++ b/src/components/Team/Team.scss
@@ -35,8 +35,8 @@
       }
 
       @include onDesktop {
-        width: calc(200px * 4 + 3 * 20px);
-        justify-content: center;
+        width: 100%;
+        justify-content: space-between;
       }
 
       @include onDesktop--xl {
