--- a/src/styles/blocks/therapist.scss
+++ b/src/styles/blocks/therapist.scss
@@ -2,7 +2,16 @@
 @import '../../styles/utils/mixins';
 
 .therapist {
-  background-color: $colorBeige;
+  padding: 0;
+  &__header-background {
+    padding: 50px;
+    background: rgb(247, 240, 224);
+    background: linear-gradient(
+      180deg,
+      rgba(247, 240, 224, 1) 0%,
+      rgba(255, 255, 255, 1) 100%
+    );
+  }
 
   &__header {
     display: flex;
@@ -20,14 +29,15 @@
     margin: 0 0 4px;
     font-size: 17px;
 
-    &:nth-child(3) {
-      margin: 0 0 12px;
+    &--last-child {
+      margin-bottom: 50px;
     }
   }
 
   &__book-button {
     text-decoration: none;
     background-color: $colorGold;
+    border: 2px solid $colorGold;
     height: 50px;
     width: 300px;
     display: flex;
@@ -36,11 +46,63 @@
     color: #fff;
     font-size: 18px;
     border-radius: 5px;
+    font-weight: 600;
+
+    transition: all 300ms ease-in-out;
+
+    &:hover {
+      background-color: #fff;
+      color: $colorGold;
+    }
   }
 
   &__photo {
     border-radius: 50%;
     overflow: hidden;
-    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.5);
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
+  }
+
+  &__about {
+    padding: 50px 0 50px;
+  }
+
+  &__about-title {
+    margin: 0 0 20px;
+    font-family: 'Montserrat';
+    font-size: 35px;
+    font-weight: 600;
+  }
+
+  &__about-subtitle {
+    margin: 0 0 20px;
+    font-size: 30px;
+    font-weight: 600;
+  }
+
+  &__about-description {
+    margin: 0 0 30px;
+    padding: 0 0 0 20px;
+    font-size: 18px;
+
+    & b {
+      font-weight: 600;
+    }
+  }
+
+  &__list {
+    margin: 0 0 25px;
+    list-style: disc;
+    padding: 10px 20px;
+    font-size: 18px;
+  }
+
+  &__list-item {
+    &::marker {
+      color: $colorGold;
+    }
+
+    & b {
+      font-weight: 600;
+    }
   }
 }
