--- a/src/components/AboutCenter/AboutCenter.scss
+++ b/src/components/AboutCenter/AboutCenter.scss
@@ -6,8 +6,14 @@
 
     height: 50%;
     display: flex;
+    flex-direction: column;
     gap: 32px;
+
+    @include onDesktop {
+      flex-direction: row;
+    }
   }
+
   &__text {
     text-align: justify;
     line-height: 1.5;
@@ -19,10 +25,15 @@
   }
 
   &__image-container {
+    width: 100%;
     display: flex;
     flex-shrink: 0.2;
     align-items: center;
-    width: 400px;
+
+    @include onTablet--m {
+      margin: 0 auto;
+      width: 400px;
+    }
 
   }
   & img {
