--- a/src/components/HomeSoulCover/HomeSoulCover.scss
+++ b/src/components/HomeSoulCover/HomeSoulCover.scss
@@ -5,5 +5,10 @@
   &__video-container {
     border-radius: 24px;
     overflow: hidden;
+
+    &--about-us {
+      width: 70%;
+      margin: 0 auto;
+    }
   }
 }
