--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,6 @@
 @import 'utils/reset';
 @import 'utils/mixins';
+@import 'utils/normalize';
 @import 'blocks/page';
 @import 'blocks/section';
 // @import 'blocks/container';
