--- a/src/components/PastProjects/PastProjects.scss
+++ b/src/components/PastProjects/PastProjects.scss
@@ -1,7 +1,21 @@
 @import '../../styles/utils/vars';
 @import '../../styles/utils/mixins';
 
+.past-projects {
+
+}
+
 .past-project {
+  &.row {
+  }
+  &.row > &__video-container {
+    padding: 0;
+
+    @include onDesktop--xl {
+      padding: 0 10px;
+    }
+  }
+
   display: flex;
   flex-direction: column;
   align-items: center;
