--- a/src/components/HomeBanner/HomeBanner.scss
+++ b/src/components/HomeBanner/HomeBanner.scss
@@ -5,31 +5,55 @@
   position: relative;
 
   &__banner {
-    align-items: center;
+    // align-items: center;
     width: 100%;
-    height: 600px;
+    height: calc(100vh - 60px);
+
     background-image: url('/images/home/home--desktop.jpg');
-    background-position: top center;
-    background-size: cover;
     background-repeat: no-repeat;
+    background-size: cover;
+
+    @include onMobile--xs {
+      background-position: left -250px center;
+    }
+
+    background-position: left -240px center;
+
+
+    @include onTablet--m {
+      height: 600px;
+      background-position: left center;
+    }
   }
 
   &__text-container {
     position: absolute;
-    top: 50%;
-    left: 50%;
 
-    transform: translateY(-50%);
+    top: 50%;
+    left: 0;
+    right: 0;
+
+    @include onTablet--s {
+      left: 30%;
+      transform: translateY(-50%);
+
+    }
+
+    @include onDesktop {
+      left: 50%;
+    }
+
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
 
     font-size: 18px;
   }
 
   &__title {
+    margin: 0;
     font-size: 64px;
-    font-weight: 00;
     letter-spacing: 8px;
 
     color: $colorBeige;
