--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -1,3 +1,9 @@
+@mixin onMobile--xs {
+  @media (max-width: 380px) {
+    @content;
+  }
+}
+
 @mixin hero--mobile-big {
   @media (min-width: 410px) {
     @content;
